--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.tictac.co</groupId>
   <artifactId>tictac-app</artifactId>
   <packaging>jar</packaging>
-  <version>2.0-SNAPSHOT</version>
+  <version>2.0</version>
   <name>tictac-app</name>
   <url>http://maven.apache.org</url>
   <repositories>
